[package]
name = "tuple_len"
version = "0.1.1"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"
license = "MIT"
description = "macro to get the number of elements in a tuple"
repository = "https://github.com/sanpii/tuple_len"

[dependencies]

[badges]
gitlab = { repository = "sanpi/tuple_len", branch = "master" }
